// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts node to feat should behave... 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      0,
    ],
    "type": "Point",
  },
  "id": "n1",
  "properties": Object {
    "@idly-geometry": "vertex",
    "@idly-icon": "circle",
    "@idly-intersection": false,
    "@idly-name": undefined,
    "@idly-preset-name": "Other",
    "id": "n1",
  },
  "type": "Feature",
}
`;

exports[`converts node to feat should behave... 2`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      15,
      10,
    ],
    "type": "Point",
  },
  "id": "n1#0",
  "properties": Object {
    "@idly-geometry": "point",
    "@idly-icon": "circle",
    "@idly-intersection": false,
    "@idly-name": undefined,
    "@idly-preset-name": "Point",
    "id": "n1#0",
  },
  "type": "Feature",
}
`;

exports[`way.test wayFeatures should behave... 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      Array [
        1,
        2,
      ],
      Array [
        3,
        4,
      ],
    ],
    "type": "LineString",
  },
  "id": "w1",
  "properties": Object {
    "@idly-geometry": "line",
    "@idly-icon": "highway-residential",
    "@idly-isOneway": false,
    "@idly-name": undefined,
    "@idly-preset-name": "Residential Road",
    "@idly-tag-highway": "tag-highway-residential",
    "id": "w1",
  },
  "type": "Feature",
}
`;

exports[`way.test wayToLineString should behave... 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      Array [
        Array [
          1,
          2,
        ],
        Array [
          2,
          3,
        ],
        Array [
          3,
          0,
        ],
        Array [
          1,
          2,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": Object {},
  "type": "Feature",
}
`;
